[package]
name = "light-server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
bytes = "1.5.0"
chrono = "0.4.31"
mime_guess = "2.0.5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" # optimize for size
lto = true
codegen-units = 1
panic="abort"
